--- a/css/styles_k.css
+++ b/css/styles_k.css
@@ -33,7 +33,7 @@ h3{
   margin-bottom: 30px;
   font-style: italic;
 }
-.w3-button{
+.btn1{
   position: relative;
   top: -50px;
   margin-bottom: -50px;
